Added a ton of holsters, added memer section.

--- a/src/content/docs/drs/holsters/caster.mdx
+++ b/src/content/docs/drs/holsters/caster.mdx
@@ -33,6 +33,18 @@ Some suggestions on what to include to fill space: **Light Curtains**, extra **R
 :::note[Pure Essences]
 You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
 :::
+
+<sl-card class="card-basic ulti-summary">
+## Table of Contents
+- [**Chainspell Cure 4**](#chainspell-cure-4)
+- [**Font of Magic Cure 4**](#font-of-magic-cure-4)
+- [**Basic Lost Flare Star**](#basic-lost-flare-star)
+- [**Basic Mimic Holster**](#basic-mimic-holster)
+- [**Excellence Cure 4 Caster**](#excellence-cure-4-caster)
+- [**Magical Excellence Battery**](#magical-excellence-battery)
+- [**Excellence Flare Star**](#excellence-flare-star)
+</sl-card>
+
 <br/><hr/>
 
 ### Chainspell Cure 4
@@ -192,7 +204,7 @@ Do not take this as a deterrent, take it as a precaution ahead of time.
 :::
 <br/><hr/>
 
-### Beginner's Lost Flare Star
+### Basic Lost Flare Star
 The almighty **Lost Flare Star** is the _most powerful_ role in the instance (outside of the duelist). Only **one** person can bring it as any others will just overwrite each other. The Flare Star's job is to be putting out as much damage as they can no matter what.
 Any and all party buffs should be funneled into you. **Font of Magic** is generally the only viable option, outside of extra overslotting, to pair with **Lost Flare Star** as **Chainspell** increases the cost to an unobtainable amount of MP.
 
@@ -272,7 +284,7 @@ Please treat this role with as much respect as possible. A proficient Flare Star
 :::
 <br/><hr/>
 
-### Beginner Mimic Holster
+### Basic Mimic Holster
 This holster will help you understand the signifigance and power of the **Mimic** action. It also has some extra wiggle room to maybe try out "Excellence Chaining". The main goal is for you to just see how **Mimic** works.
 If you're looking for guides on how to Mimic, please see the note below the holsters. If you're looking for a guide on how to Excellence Chain, please see: \<link goes here\>
 
