--- a/src/content/docs/drs/holsters/melee.mdx
+++ b/src/content/docs/drs/holsters/melee.mdx
@@ -28,6 +28,16 @@ Some suggestions on what to include to fill space: **Light Curtains**, extra **R
 :::note[Pure Essences]
 You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
 :::
+
+<sl-card class="card-basic ulti-summary">
+## Table of Contents
+- [**Basic Melee DPS Holster**](#basic-melee-dps-holster)
+- [**Basic Rend Armor Holster**](#basic-rend-armor-holster)
+- [**Basic Mimic Holster**](#basic-mimic-holster)
+- [**Excellence Melee**](#excellence-melee)
+- [**Physical Excellence Battery**](#physical-excellence-battery)
+</sl-card>
+
 <br/><hr/>
 
 ### Basic Melee DPS Holster
@@ -185,7 +195,7 @@ This is a **gap closer**! Using this action will send you towards the target and
 :::
 <br/><hr/>
 
-### Beginner Mimic Holster
+### Basic Mimic Holster
 This holster will help you understand the signifigance and power of the **Mimic** action. It also has some extra wiggle room to maybe try out "Excellence Chaining". The main goal is for you to just see how **Mimic** works.
 If you're looking for guides on how to Mimic, please see the note below the holsters. If you're looking for a guide on how to Excellence Chain, please see: \<link goes here\>
 
@@ -274,6 +284,8 @@ refresh **Font of Power** and get **Lost Excellence** back.
 During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Banner of Honored Sacrifice**, and slot it [the banner] over Excellence. Once done, you can press **Font of Power** and **Banner of Honored Sacrifice**
 together. From there, the fight will proceed as normal with you pressing Font/Banner during every **2 minute** raid buff window.
 
+If assigned to Rend, you can swap out the **Banner of Honored Sacrifices** for **Lost Rend Armor** instead. The opener will function the same unless you're the second rend. Then you would just delay pressing **Rend Armor** until the first one falls off.
+
 It is important that you overslot **Excellence** with your **Banner of Honored Sacrifice**. Holding **Excellence** through the whole instance is a massive DPS loss and also could potentially waste the assigned batteries's Excellence plates. 
 <div class="two-holster-tables">
   <table class="dps">
@@ -355,6 +367,8 @@ Drop the reraisers and add two more **Banner of Honored Sacrifice**. You can res
 This holster replaces a **Mimic** with **Lost Excellence** to allow other players to use Mimic on you. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
 One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Banner of Honored Sacrifice** (keeping **Font of Power** still) and inform the raid with a message or marking yourself with a triangle head marker to
 signify that you are ready to be mimicked.
+
+If assigned to Rend, you can swap out the **Banner of Honored Sacrifices** for **Lost Rend Armor** instead. The opener will function the same unless you're the second rend. Then you would just delay pressing **Rend Armor** until the first one falls off.
 
 During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Banner of Honored Sacrifice**, and slot it [the banner] over Excellence. Once done, you can press **Font of Power** and **Banner of Honored Sacrifice**
 together. From there, the fight will proceed as normal with you pressing Font/Banner during every **2 minute** raid buff window.
