--- a/src/content/docs/drs/holsters/phys.mdx
+++ b/src/content/docs/drs/holsters/phys.mdx
@@ -29,6 +29,15 @@ Some suggestions on what to include to fill space: **Light Curtains**, extra **R
 :::note[Pure Essences]
 You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
 :::
+
+<sl-card class="card-basic ulti-summary">
+## Table of Contents
+- [**Basic Physical Ranged Holster**](#basic-physical-ranged-holster)
+- [**Basic Mimic Holster**](#Basic-mimic-holster)
+- [**Excellence Dervish**](#excellence-dervish)
+- [**Physical Excellence Battery**](#physical-excellence-battery)
+</sl-card>
+
 <br/><hr/>
 
 ### Basic Physical Ranged Holster
@@ -107,7 +116,7 @@ as many buffs as possible into that short timeframe.
 </div>
 <br/><hr/>
 
-### Beginner Mimic Holster
+### Basic Mimic Holster
 This holster will help you understand the signifigance and power of the **Mimic** action. It also has some extra wiggle room to maybe try out "Excellence Chaining". The main goal is for you to just see how **Mimic** works.
 If you're looking for guides on how to Mimic, please see the note below the holsters. If you're looking for a guide on how to Excellence Chain, please see: \<link goes here\>
 
