--- a/src/content/docs/drs/holsters/tank.mdx
+++ b/src/content/docs/drs/holsters/tank.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tank Holstrs
+title: Tank Holsters
 description: Aethershield and Blood Rage
 ---
 
@@ -15,7 +15,8 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
-Tanks help support the parties by supplying a powerful AoE mitigation during Trinity Avowed and The Queen while also dishing out some strong DPS on their own. 
+Tanks help support the parties by supplying a powerful AoE mitigation during Trinity Avowed and The Queen while also dishing out some strong DPS on their own. Tanks will also have their own responbility in hold aggro of some enemies during trash fights or even co-tanking fights with
+the main tank. If there are two tanks in your party, please ensure that one of them is designated as the Main **Aethershield** bringer as it is vital to your party's survival during Trinity Avowed and Queen. 
 
 Your **Pure Essence of the Indomitable** synergizes with **Lost Sacrifice** to give you a 50% chance to "dodge" the Doom given by **Lost Sacrifice**. This can be great in a pinch when the raid begins to run low on **Lost Arises**.
 
@@ -27,11 +28,23 @@ Some suggestions on what to include to fill space: **Light Curtains**, extra **R
 :::note[Pure Essences]
 You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
 :::
+
+<sl-card class="card-basic ulti-summary">
+## Table of Contents
+- [**Basic Aethershield Tank Holster**](#basic-aethershield-tank-holster)
+- [**Basic Off Tank Holster**](#basic-off-tank-holster)
+- [**Blood Rage Aethershield Tank**](#blood-rage-aethershield-tank)
+- [**Blood Rage Off Tank**](#blood-rage-off-tank)
+- [**Lynn's Chad Main Tank Bag**](#lynns-chad-main-tank-bag)
+</sl-card>
+
 <br/><hr/>
 
 ### Basic Aethershield Tank Holster
-text
+Standard aethershield tank holster. Both **Font of Power** and **Banner of Honored Sacrifice** should be used together in combination with the **2 minute** raid buff window along with your hardest hitting skills. **Lost Shell 2** is to be slotted in over **Banner of Honored Sacrifice** before Trinity Avowed and handed out to everyone in the raid (who wants it).
+Afterwards, you will slot in **Lost Aethershield** (over Shell 2) and press it each time the raidwide is being casted.
 
+You may have some other small responsibilities, but the main thing is pressing **Aethershield** at the appopriate times.
 <div class="two-holster-tables">
   <table class="tank">
   <caption>**Pre-load**</caption>
@@ -114,11 +127,17 @@ text
     </tr>
   </table>
 </div>
+:::note[Lost Aethershield]
+One tank per party must being designated the main aethershield user. It is critical that one tank carries this action as the raidwides at Trinity Avowed and The Queen are considered *lethal* to anyone with low stacks of fortitiue (the blue buff).
+:::
+
 <br/><hr/>
 
 ### Basic Off Tank Holster
-text
+Both **Font of Power** and **Banner of Honored Sacrifice** should be used together in combination with the **2 minute** raid buff window along with your hardest hitting skills. You will pack a copy of **Aethershield** in your holster in case your party's main tank goes down and does not get reraised.
+If this happens, please assume the role of the **Aethershield** tank until the fight is over.
 
+You may have some other small responsibilities, but for the most part consider yourself a blue DPS.
 <div class="two-holster-tables">
   <table class="tank">
   <caption>**Pre-load**</caption>
@@ -204,7 +223,10 @@ text
 <br/><hr/>
 
 ### Blood Rage Aethershield Tank
-text
+High damage tank that primarily focuses on it's own buff window with **Lost Blood Rage** being every **3 minutes**. **Lost Shell 2** is to be slotted in over **Font of Power** before Trinity Avowed and handed out to everyone in the raid (who wants it).
+Afterwards, you will slot in **Lost Aethershield** (over Shell 2) and press it each time the raidwide is being casted.
+
+You may have some other small responsibilities, but the main thing is pressing **Aethershield** at the appopriate times.
 
 <div class="two-holster-tables">
   <table class="tank">
@@ -288,10 +310,23 @@ text
     </tr>
   </table>
 </div>
+:::danger[How to Blood Rage]
+Blood Rage is actually much simplier than it looks! To successfully proc **Blood Rush** you must space out your dashes enough to build 4 stacks of **Blood Rage**. Before activating ensure you have both of your dash charges! 
+
+When activated, dash immediately to gain your second stack of **Blood Rage**. Wait until the buff is less than 3 seconds and dash again, you shuold now have 3 stacks of **Blood Rage**. Now simply wait for your dash to come off cooldown and press it immediately.
+This will activate **Blood Rush** and give you 30 seconds of 75% cooldown reduction and pure insanity. Have fun face rolling your keyboard!
+
+If you want to read more about this in depth, please visit: [How to Blood Rage](/drs/bloodrage).
+:::
+
 <br/><hr/>
 
 ### Blood Rage Off Tank
-text
+High damage tank that primarily focuses on it's own buff window with **Lost Blood Rage** being every **3 minutes**. You should hold any hard hitting abilities until you are under the effects of **Blood Rush** (the buff you get after successfully building **Blood Rage**). 
+You will pack a copy of **Aethershield** in your holster in case your party's main tank goes down and does not get reraised.
+If this happens, please assume the role of the **Aethershield** tank until the fight is over.
+
+You may have some other small responsibilities, but for the most part consider yourself a blue DPS.
 
 <div class="two-holster-tables">
   <table class="tank">
@@ -375,10 +410,22 @@ text
     </tr>
   </table>
 </div>
+:::danger[How to Blood Rage]
+Blood Rage is actually much simplier than it looks! To successfully proc **Blood Rush** you must space out your dashes enough to build 4 stacks of **Blood Rage**. Before activating ensure you have both of your dash charges! 
+
+When activated, dash immediately to gain your second stack of **Blood Rage**. Wait until the buff is less than 3 seconds and dash again, you shuold now have 3 stacks of **Blood Rage**. Now simply wait for your dash to come off cooldown and press it immediately.
+This will activate **Blood Rush** and give you 30 seconds of 75% cooldown reduction and pure insanity. Have fun face rolling your keyboard!
+
+If you want to read more about this in depth, please visit: [How to Blood Rage](/drs/bloodrage).
+:::
+
 <br/><hr/>
 
 ### Lynn's Chad Main Tank Bag
-You like being the main character? So do I.
+Main Character Syndrome the bag. This job requires that you play either Gunbreaker or Paladin for their pure invulnverabilities. You can handle the entire instance as the main tank including: Dispelling the Warrior during Queen's Guard, solo tanking The Queen, and raise two dead players.
+
+With the **Lost Sacrifice** and **Lost Reraise** you can almost replicate Sac chaining from Baldesion Aresenal. Slot in Sacrifice over not-blood rage, raise the body, and slot in Lost Reraise over that Sacrifice you just used. Give one of your two charges of Reraise to your Sacrifice target
+and the other to yourself (if you take the Doom from Sacrifice) or just give it to someone random if you dodge the doom.
 
 <div class="two-holster-tables">
   <table class="tank">
@@ -468,74 +515,13 @@ You like being the main character? So do I.
     </tr>
   </table>
 </div>
-<br/><hr/>
+:::note[Solo Tanking Queen]
+Since **Lost Blood Rage** reduces the cooldowns of all abilties by 75%, you can abuse this to take all 3 Queen busters on your own. Ensure that you hold **two** charges of Blood Rage until Queen.
 
-### Impetus Blood Rage
-lol, lmao
+A few tricks to help you up is to press **Rampart** on pull and waiting for that buff to fall off to activate **Blood Rage**. From there, build up BR as normal. This will put the first tankbuster, and your invuln, under blood rush. For the second buster, activate and start building **Blood Rage** right as the Maelstorm's Bolt (the lightning orbs raidwide)
+hits. Build **Blood Rage** as normal here too while respecting mechanics, and this will put the second buster and invuln under **Blood Rush**. Final tankbuster happens after Super Chess 2 and your invuln will definitely be back by then. Congrats! You solo tanked Queen.
 
-<div class="two-holster-tables">
-  <table class="tank">
-  <caption>**Pre-load**</caption>
-      <col width="60px" />
-      <col width="275px" />
-      <col width="20px" />
-      <col width="20px" />
-    <tr>
-      <th colspan="4">Lost Action</th>
-    </tr>
-    <tr>
-      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fop.png"/></td>
-      <td colspan="3">**Lost Font of Power**</td>
-    </tr>
-    <tr>
-      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/bloodrage.png"/></td>
-      <td colspan="3">**Lost Blood Rage**</td>
-    </tr>
-    <tr>
-      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/indom.png"/></td>
-      <td colspan="3">**Pure Essence of the Indomitable**</td>
-    </tr>
-    <tr>
-      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
-      <td colspan="3">**Resistance Reraiser**</td>
-    </tr>
-  </table>
-
-  <table class="tank">
-  <caption>**Instance Ready**</caption>
-      <col width="60px" />
-      <col width="275px" />
-      <col width="20px" />
-      <col width="20px" />
-    <tr>
-      <th colspan="2">Lost Action</th>
-      <th>Qty.</th>
-      <th>Wt.</th>
-    </tr>
-    <tr>
-      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/bloodrage.png"/></td>
-      <td >**Lost Blood Rage**</td>
-      <td>1</td>
-      <td>25</td>
-    </tr>
-    <tr>
-      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/impetus.png"/></td>
-      <td>**Lost Impetus**</td>
-      <td>2</td>
-      <td>16</td>
-    </tr>
-    <tr>
-      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
-      <td>**Resistance Reraiser**</td>
-      <td>2</td>
-      <td>16</td>
-    </tr>
-    <tr style="background-color: transparent">
-      <td style="border: none;"/>
-      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
-      <td>95</td>
-    </tr>
-  </table>
-</div>
+This holster assumes you know how to use **Blood Rage**. If you don't, please visit: [How to Blood Rage](/drs/bloodrage)
+:::
 
 <Footer />
