Added blood rage how to. thanks val and opalt

--- a/src/content/docs/drs/holsters/meme.mdx
+++ b/src/content/docs/drs/holsters/meme.mdx
@@ -224,7 +224,7 @@ during Trinity Avowed's "Forced March" mechanic.
 
 This holster lets you Impetus chain for Trinity Seeker and Queen's Guard before swapping into the Aethershield role for Avowed/Queen.
 
-If you're looking for more on how to Impetus chain, please see: \<insert link here\>
+If you're looking for more on how to Impetus chain, please see the [Impetus Chaining Guide](/drs/bloodrage/#impetus-chaining)
 
 :::danger[Ask the Host and Your Party!]
 PLEASE ask both the host and your party if they are okay with you using **Lost Impetus.** If anyone says no, please respect that choice.
@@ -327,7 +327,7 @@ The 2 **Impetus** plates are used for TA and Queen to accerlate your enterance i
 You are REQUIRED to have 8 stacks of Fortitude, Bubble, and Shell 2. Not having these will often result in instantaneous death. 
 :::
 
-You can also swap out the contents of this holster for something akin to Impetus chaining while still using Irregular. If you're looking for more on how to Impetus chain, please see: \<insert link here\>
+You can also swap out the contents of this holster for something akin to Impetus chaining while still using Irregular. If you're looking for more on how to Impetus chain, please see the [Impetus Chaining Guide](/drs/bloodrage/#impetus-chaining)
 
 <div class="two-holster-tables">
   <table class="tank">
