--- a/src/content/docs/drs/holsters/phys.mdx
+++ b/src/content/docs/drs/holsters/phys.mdx
@@ -91,7 +91,7 @@ as many buffs as possible into that short timeframe.
     </tr>
     <tr>
       <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/dervish.png"/></td>
-      <td>**Lost Devish**</td>
+      <td>**Lost Dervish**</td>
       <td>1</td>
       <td>10</td>
     </tr>
@@ -136,7 +136,7 @@ If you're looking for guides on how to Mimic, please see the note below the hols
     </tr>
     <tr>
       <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/dervish.png"/></td>
-      <td colspan="3">**Lost Devish**</td>
+      <td colspan="3">**Lost Dervish**</td>
     </tr>
     <tr>
       <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fiendhunter.png"/></td>
@@ -167,7 +167,7 @@ If you're looking for guides on how to Mimic, please see the note below the hols
     </tr>
     <tr>
       <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/dervish.png"/></td>
-      <td>**Lost Devish**</td>
+      <td>**Lost Dervish**</td>
       <td>2</td>
       <td>20</td>
     </tr>
@@ -202,10 +202,10 @@ If you're looking for guides on how to Mimic, please see the note below the hols
 This is truly the easiest and most effective way to output as much DPS as you can on **any role**, outside of one exception. While this is a rather heavy and expensive bag, it's effects cannot be understated. Mimic is used before every major Non-Trinity Seeker fight to
 refresh **Font of Power** and get **Lost Excellence** back. 
 
-During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Lost Devish**, and slot it [the banner] over Excellence. Once done, you can press **Font of Power** and **Lost Devish**
+During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Lost Dervish**, and slot it [the banner] over Excellence. Once done, you can press **Font of Power** and **Lost Dervish**
 together. From there, the fight will proceed as normal with you pressing Font/Banner during every **2 minute** raid buff window.
 
-It is important that you overslot **Excellence** with your **Lost Devish**. Holding **Excellence** through the whole instance is a massive DPS loss and also could potentially waste the assigned batteries's Excellence plates. 
+It is important that you overslot **Excellence** with your **Lost Dervish**. Holding **Excellence** through the whole instance is a massive DPS loss and also could potentially waste the assigned batteries's Excellence plates. 
 
 **Reminder:** Mimic does not work in combat.
 <div class="two-holster-tables">
@@ -255,7 +255,7 @@ It is important that you overslot **Excellence** with your **Lost Devish**. Hold
     </tr>
     <tr>
       <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/dervish.png"/></td>
-      <td>**Lost Devish**</td>
+      <td>**Lost Dervish**</td>
       <td>4</td>
       <td>40</td>
     </tr>
@@ -290,10 +290,10 @@ Remember, **Mimic** does not work in combat!
 
 ### Physical Excellence Battery
 This holster replaces a **Mimic** with **Lost Excellence** to allow other players to use Mimic on you. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
-One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Lost Devish** (keeping **Font of Power** still) and inform the raid with a message or marking yourself with a triangle head marker to
+One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Lost Dervish** (keeping **Font of Power** still) and inform the raid with a message or marking yourself with a triangle head marker to
 signify that you are ready to be mimicked.
 
-During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Lost Devish**, and slot it [Dervish] over Excellence. Once done, you can press **Font of Power** and **Lost Devish**
+During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Lost Dervish**, and slot it [Dervish] over Excellence. Once done, you can press **Font of Power** and **Lost Dervish**
 together. From there, the fight will go on with you pressing Font/Dervish during every **2 minute** raid buff window as you normally would.
 <div class="two-holster-tables">
   <table class="phys">
@@ -348,7 +348,7 @@ together. From there, the fight will go on with you pressing Font/Dervish during
     </tr>
     <tr>
       <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/dervish.png"/></td>
-      <td>**Lost Devish**</td>
+      <td>**Lost Dervish**</td>
       <td>4</td>
       <td>40</td>
     </tr>
