--- a/src/content/docs/others/credits.mdx
+++ b/src/content/docs/others/credits.mdx
@@ -17,8 +17,9 @@ import Footer from '@components/Footer.astro'
 ### Thank you to... ###
 - Tenkay for making <a href="https://ultistrats.com" target="_blank">ultistrats.com</a> in turn making me want to create this resource.
   - Also allowing me to basically rip ultistrats off :^\)
-- O'palt Jhaid for providing most of the resources, images, and text on the site.
-- Carter Valentine for writing and providing a ton of resources in the DRS section
+- O'palt Jhaid for providing countless pages of information for various topics.
+- Carter Valentine for writing and providing a ton of resources in the DRS section and providing holsters.
+- Valagnar Shade for writing the [Blood Rage 101](/drs/bloodrage) guide
 - Celery for making <a href="https://bozja.net" target="_blank">bozja.net</a> and compiling a ton useful of Bozja/Zadnor resources into one place.
 
 <Footer />
